--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
         <div class="header-text">
             <p>Web designer</p>
-            <h1>Hi, I'm <span>Lakeesha <br>Abeygunawardana</span>  </h1>
+            <h1>Hi, I'm <span>Lakeesha</span> <br> Arunodi  </h1>
         </div>
     </div>
 </div>
@@ -41,7 +41,7 @@
             <div class="about-col-2">
                 <h1 class="sub-title">About me</h1>
                 <p><br>
-                   <h4>I'm a front-end web developer.I can provide clean code and pixel perfect design. I enjoy turning complex problems into simple,beautiful and intuitive design.I also make the websites more & more interactive with web animations. A responsive design makes your website accesible to all users reguardless of their
+                   <h4 class="intro">I'm a front-end web developer.I can provide clean code and pixel perfect design. I enjoy turning complex problems into simple,beautiful and intuitive design.I also make the websites more & more interactive with web animations. A responsive design makes your website accesible to all users reguardless of their
                     devices..</h4>
                     
                 </p>
